# Draguniteus-CLI

./: .draguniteusignore  .pre-commit-config.yaml  DRAGUNITEUS.md  README.md  draguniteus.bat  pyproject.toml  rich_live_test.py  smoke_test.py  test_output.txt  ultra_stress_test.py
.draguniteus/: semantic_graph.json
.github/workflows/: tests.yml
benchmark/: LEADERBOARD.md  benchmark.py  harness.py  run.py  runner.py  tasks.py
src/draguniteus/: __init__.py  __main__.py  agent.py  checkpoint.py  cli.py  client.py  config.py  hook_runner.py  orchestrator.py  permissions.py  pr_status.py  repl_core.py  role_adapter.py  rules.py  self_correction.py  self_improvement.py  session.py  streaming_display.py  subagents.py  suggestions.py  tasklist.py  tasks.py  theming.py  thinking_router.py  transcript.py  worktree.py
src/draguniteus/agents/: eval.py  loader.py
src/draguniteus/diff/: __init__.py  viewer.py
src/draguniteus/inspect/: __init__.py
src/draguniteus/memory/: __init__.py  conversation_archive.py  manager.py  pattern_library.py  semantic_graph.py  vector_store.py
src/draguniteus/navigation/: semantic_search.py
tests/: test_advanced_scenarios.py  test_agentic_workflow.py  test_arena_and_git.py  test_checkpoint.py  test_live_integration.py  test_memory_manager.py  test_nested_tool_executor.py  test_optimization.py  test_orchestrator.py  test_preview_server.py  test_role_adapter.py  test_self_correction.py  test_self_improvement.py  test_session_branching.py  test_thinking_router.py  test_tool_reflection.py  test_training_scenarios.py
(+42 files in other folders)
