[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "draguniteus"
version = "0.1.0"
description = "Draguniteus — A dragon-themed CLI coding agent powered by MiniMax"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Angel Michael" }
]
keywords = ["cli", "coding", "agent", "ai", "minimax"]
dependencies = [
    "httpx>=0.27.0",
    "typer>=0.15.0",
    "rich>=13.0.0",
    "questionary>=2.1.0",
    "gitpython>=3.1.0",
    "pyyaml>=6.0",
    "pathspec>=0.12.0",
    "requests>=2.31.0",
    "chromadb>=0.4.0",
    "tiktoken>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "pytest-mock>=3.14.0",
]

[project.scripts]
draguniteus = "draguniteus.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/draguniteus"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
]